--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+@import "variables";
+@import "./app/styles/fonts/fonts.scss";
+@import "./app/styles/mixins/nostyle.scss";
+@import "./app/styles/blocks/my-btn.block.scss";
+@import "./app/styles/blocks/acid-input.block.scss";
+@import "./app/styles/blocks/acid-ddown.block.scss";
+
+html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $black;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  padding-top: 100px;
+  align-items: center;
+}
