--- a/src/app/components/standalone/dateInput/dateInput.template.html
+++ b/src/app/components/standalone/dateInput/dateInput.template.html
@@ -1,20 +1,5 @@
 <div class="date-input-container">
-    <day-input></day-input>
-    <month-input></month-input>
-    <year-input></year-input>
-  <!-- <date-input
-    [className]="' day-input'"
-    [type]="'day'"
-    [placeholder]="'day'"
-  ></date-input>
-  <date-input
-    [placeholder]="'month'"
-    [type]="'month'"
-    [className]="' month-input'"
-  ></date-input>
-  <date-input
-    [placeholder]="'year'"
-    [type]="'year'"
-    [className]="' year-input'"
-  ></date-input> -->
+    <day-input #day></day-input>
+    <month-input #month></month-input>
+    <year-input #year></year-input>
 </div>
