--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,8 @@
 @import "./app/styles/blocks/my-btn.block.scss";
 @import "./app/styles/blocks/acid-input.block.scss";
 @import "./app/styles/blocks/acid-ddown.block.scss";
+@import "./app/styles/blocks/acid-input-error.block.scss";
+@import "./app/styles/blocks/selected-items.block.scss";
 
 html {
   margin: 0;
