--- a/src/app/components/main/tasks.style.scss
+++ b/src/app/components/main/tasks.style.scss
@@ -25,7 +25,6 @@
     justify-content: center;
     height: 15%;
     width: 100%;
-    // border: 1px solid red;
 
     .tasks-header-list {
       display: flex;
@@ -37,23 +36,43 @@
   &__main {
     height: 80%;
     width: 100%;
-    // border: 1px solid rebeccapurple;
   }
 
   &__aside {
     position: absolute;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
-    width: 270px;
-    height: 550px;
-    padding: 25px 15px;
-    background-color: $black;
-    z-index: 9;
+    height: 525px;
+    padding-top: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 60px;
     border-radius: 40px;
     border: $acid-border-bold;
     overflow: hidden;
-    // box-shadow: 0px 0px 20px 1px $blue;
+  }
+
+  &__aside-items {
+    height: 100%;
+    width: 100%;
+    scrollbar-width: thin;
+    overflow: auto;
+  }
+
+  &__aside-item {
+    margin-bottom: 20px;
+  }
+
+  &__aside-date {
+    margin-top: 25px;
+    margin-left: -4px;
+  }
+
+  &__aside-btn {
+    position: absolute;
+    width: 255px;
+    bottom: 25px;
+    z-index: 10;
   }
 }
