--- a/src/app/styles/blocks/my-btn.block.scss
+++ b/src/app/styles/blocks/my-btn.block.scss
@@ -7,6 +7,7 @@
   font-family: $font-bold;
   text-transform: uppercase;
   transition: 0.3s;
+  background-color: $black;
   cursor: pointer;
 
   &--tasks {
